Fri Apr 25 09:25:00 UTC 2008  Simon Massey  <sma at pristmech dot com>

        * examples/MFC/server.mpc:
        * utils/NamingViewer/NamingView.mpc:

          Feature name "uses_wchar" already used within ACE/TAO. Replaces
          the "unicode" feature name. Template / project name within MPC
          still named unicode.

Fri Apr 25 09:10:32 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/DiffServPolicy/Server_Network_Priority_Policy.cpp:
        * tao/Messaging/Buffering_Constraint_Policy.cpp:
        * tao/Messaging/Connection_Timeout_Policy_i.cpp:
        * tao/Messaging/Messaging_Policy_i.cpp:
          Fixed gnu warnings

Fri Apr 25 07:27:32 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Profile.h:
          Doxygen change

        * tao/RTCORBA/RT_Policy_i.cpp:
          Fixed gnu warning

Thu Apr 24 19:23:32 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/Notify_Service/Notify_Service.{h,cpp}:
          Use bool and removed not used flag

Thu Apr 24 18:33:32 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/BiDir_GIOP/BiDir_ORBInitializer.h
        * tao/BiDir_GIOP/BiDir_PolicyFactory.h
        * tao/CodecFactory/CDR_Encaps_Codec.h
        * tao/CodecFactory/CodecFactory_impl.h
        * tao/Codeset/Codeset_Manager_i.cpp
        * tao/Compression/Base_Compressor.h
        * tao/Compression/Compression_Manager.h
        * tao/Compression/Compressor_Factory.h
        * tao/Configurable_Refcount.h
        * tao/CSD_Framework/CSD_ORBInitializer.h
        * tao/CSD_Framework/CSD_Strategy_Base.h
        * tao/DiffServPolicy/Client_Network_Priority_Policy.cpp
        * tao/DiffServPolicy/Client_Network_Priority_Policy.h
        * tao/DiffServPolicy/DiffServPolicy_Factory.h
        * tao/DiffServPolicy/DiffServPolicy_ORBInitializer.h
        * tao/DiffServPolicy/Server_Network_Priority_Policy.cpp
        * tao/DiffServPolicy/Server_Network_Priority_Policy.h